apps/auth-service/kustomize/overlays/dev/base/common-app/templates/deployment.yaml
---
# Source: common-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: "harbor.local/banking-demo/auth-service:6"
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
