apps/auth-service/kustomize/overlays/dev/base/common-app/templates/service.yaml
---
# Source: common-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: auth-service
