apps/auth-service/kustomize/overlays/dev/base/common-app/templates/httproute.yaml
---
# Source: common-app/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-service
spec:
  parentRefs:
  - name: banking-gateway
    namespace: kong
  hostnames:
  - "banking.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    backendRefs:
    - name: auth-service
      port: 8081
